--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 Django==4.0.1
+django-common-helpers==0.9.2
 django-cors-headers==3.11.0
+django-cron==0.5.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 PyJWT==2.3.0
